# CodeWaveMl101

./: .gitignore
Demo/: Demo_notebook.ipynb  README.md  main.py  model.pkl  pyproject.toml
Project/: README.md  pyproject.toml
Project/Notebooks/: 1_EDA.ipynb  2_Data_Prep.ipynb  3_Model_Training.ipynb
